# opengl-triangles-demo

./: CMakeLists.txt  README.md  fragmentS.glsl  geometry.cpp  geometry.h  main.cpp  shader_import.cpp  shader_import.h  triangles_manager.cpp  triangles_manager.h  vertexS.glsl
